--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -1,4 +1,4 @@
-name: ci
+name: formatting
 
 on:
   pull_request:
@@ -6,7 +6,7 @@ on:
 
 jobs:
   tests:
-    name: Tests
+    name: Formatting
     runs-on: ubuntu-latest
 
     steps:
@@ -18,5 +18,5 @@ jobs:
         with:
           go-version: '1.22'
 
-      - name: Run Tests
-        run: go test -cover ./...
+      - name: Format code
+        run: test -z $(go fmt./...)
