renamed formatting to style

--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -1,4 +1,4 @@
-name: formatting
+name: style
 
 on:
   pull_request:
@@ -6,7 +6,7 @@ on:
 
 jobs:
   tests:
-    name: Formatting
+    name: Style
     runs-on: ubuntu-latest
 
     steps:
@@ -18,5 +18,5 @@ jobs:
         with:
           go-version: '1.22'
 
-      - name: Format code
+      - name: Style code
         run: test -z $(go fmt ./...)
