--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         run: go test -cover ./...
 
   style:
-    name: Style
+    name: Style and Lint
     runs-on: ubuntu-latest
 
     steps:
