--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         run: go test -cover ./...
 
   style:
-    name: Style and Lint
+    name: Style
     runs-on: ubuntu-latest
 
     steps:
@@ -40,5 +40,5 @@ jobs:
       - name: Install staticcheck
         run: go install honnef.co/go/tools/cmd/staticcheck@latest
 
-      - name: Run staticcheck
+      - name: staticcheck
         run: staticcheck ./...
