--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,6 +10,9 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
 
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -39,3 +42,5 @@ jobs:
       
       - name: Deploy to Cloud Run
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/top-decoder-432709-t3/notely-ar-repo/ds1242/notely:latest --region us-central1 --allow-unauthenticated --project top-decoder-432709-t3 --max-instances=4
+
+      
