--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,9 +22,11 @@ jobs:
         with:
           go-version: '1.22'
 
+      - name: Install goose
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
+
       - name: Run buildscript
         run:  './scripts/buildprod.sh'
-
 
       - id: 'auth'
         uses: 'google-github-actions/auth@v2'
@@ -39,6 +41,9 @@ jobs:
 
       - name: Build and push Docker image
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/top-decoder-432709-t3/notely-ar-repo/ds1242/notely:latest
+
+      - name: Migrate DB
+        run: './scripts/migrateup.sh'
       
       - name: Deploy to Cloud Run
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/top-decoder-432709-t3/notely-ar-repo/ds1242/notely:latest --region us-central1 --allow-unauthenticated --project top-decoder-432709-t3 --max-instances=4
